dnl Configure template for the EMBOSS package.
dnl Process this file with autoconf to produce a configure script.

#if you want to force configure to use the default C compiler cc
## then uncomment the following line.
#CC=cc

AC_INIT(src/dnadist.c)
AM_INIT_AUTOMAKE(PHYLIP, 3.573c)

dnl Use libtool to make a shared library.
AM_PROG_LIBTOOL

dnl Program checks
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Check for header files
#AC_PATH_XTRA
AC_HEADER_DIRENT
AC_HEADER_STDC
#AC_CHECK_HEADERS(fcntl.h limits.h malloc.h unistd.h)
AC_CHECK_HEADERS(unistd.h)

dnl need to do tests as ajax library will have these included hence
dnl if we want it to compile we have to include the same

#LF_EMBOSS_PATH_XLIB
#CHECK_PNGDRIVER

dnl Check for typedefs, structures and compiler characteristics
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Check for library functions
#AC_FUNC_GETPGRP
#AC_FUNC_STRFTIME
#AC_FUNC_VFORK
#AC_FUNC_VPRINTF
#AC_CHECK_FUNCS(memcpy memmove getcwd gethostname mkfifo socket strcspn strdup strerror strspn strstr strtod strtol)
#AC_CHECK_FUNCS(memmove)


dnl Library checks
AC_CHECK_LIB(m, main)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(c, gethostbyname, LIBS="$LIBS", LIBS="$LIBS -lnsl")
#AC_CHECK_LIB(curses, main)

CFLAGS="-O"

dnl Test if --enable-debug given
AC_ARG_ENABLE(debug,
[  --enable-debug          debug (-g option on compiler)])
if test "${enable_debug}" = "yes" ; then
  CFLAGS="-g"
fi          



dnl Test if purify exists and if --enable-purify given if so
dnl set "-g" else set "-O"
AC_MSG_CHECKING(for purify)
if(purify -version) < /dev/null > /dev/null 2>&1; then
   AC_MSG_RESULT(yes)
   AC_ARG_ENABLE(purify,
   [  --enable-purify          purify ])
   if test "${enable_purify}" = "yes" ; then
     CFLAGS="-g"
   fi          
else
   AC_MSG_RESULT(no)
fi

dnl Test if --enable-debug given
AC_ARG_ENABLE(warnings,
[  --enable-warnings          warnings (-Wall option on compiler)])
if test "${enable_warnings}" = "yes" ; then
  CFLAGS="$CFLAGS -Wall"
fi          

AM_CONDITIONAL(PURIFY, test "${enable_purify}" = "yes")


dnl Tests for AIX
dnl If shared needs -Wl,-G in plplot,ajax,nucleus, -lX11 in plplot,
dnl and -Wl,brtl -Wl,-bdynamic in emboss
dnl We therefore need a static test as well
AM_CONDITIONAL(ISAIXIA64, test "`uname`" = "AIX")
AM_CONDITIONAL(ISSHARED, test "${enable_shared}" = "yes")


AC_OUTPUT(src/Makefile emboss_acd/Makefile Makefile)



