pkgdata_DATA = acnum.hit acnum.trg division.lkp entrynam.idx \
               seqvn.hit seqvn.trg des.hit des.trg \
               key.hit key.trg tax.hit tax.trg \
               est.dat fun.dat hum1.dat inv.dat pln.dat pro.dat rod.dat \
               sts.dat vrl.dat vrt.dat

pkgdatadir=$(prefix)/share/$(PACKAGE)/test/embl

