
pkgdata_DATA = contacts.acd domainer.acd fraggle.acd hetparse.acd hmmgen.acd \
	interface.acd pdbparse.acd pdbtosp.acd profgen.acd scopalign.acd \
	scopnr.acd scopparse.acd scoprep.acd scopreso.acd scopseqs.acd \
	seqalign.acd seqnr.acd seqsearch.acd seqsort.acd seqwords.acd \
	siggen.acd sigplot.acd sigscan.acd
pkgdatadir=$(prefix)/share/EMBOSS/acd
