
pkgdata_DATA = = domainer.acd domainalign.acd domainnr.acd domainrep.acd domainreso.acd domainseqs.acd \
               libgen.acd pdbparse.acd scopparse.acd \
               seqalign.acd seqnr.acd seqsearch.acd seqfraggle.acd seqsort.acd \
               rocplot.acd rocon.acd
pkgdatadir=$(prefix)/share/EMBOSS/acd
