
pkgdata_DATA = allversusall.acd cathparse.acd contacts.acd \
               domainer.acd domainalign.acd domainnr.acd domainrep.acd domainreso.acd domainseqs.acd domainsse.acd \
               hetparse.acd interface.acd libgen.acd \
               pdbtosp.acd pdbparse.acd pdbplus.acd \
               rocplot.acd rocon.acd \
               scopparse.acd seqalign.acd seqnr.acd seqsearch.acd seqfraggle.acd seqsort.acd seqwords.acd \
               sigscan.acd siggen.acd sites.acd ssematch.acd

pkgdatadir=$(prefix)/share/EMBOSS/acd
